--- a/Huragan.ipynb
+++ b/Huragan.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2ebd16ad",
+   "metadata": {},
+   "source": [
+    "# Import the modules\n",
+    "\n",
+    "\n",
+    "It imports the sys module, which provides access to system-specific parameters and functions.\n",
+    "It then uses the sys.executable attribute to determine the path to the Python interpreter currently running the script.\n",
+    "The !{...} syntax is used to execute shell commands directly from within Python code (commonly used in Jupyter notebooks or IPython). In this case, it installs two Python packages using pip:\n",
+    "nlp_rake: A package for extracting keywords from text using the Rapid Automatic Keyword Extraction (RAKE) algorithm.\n",
+    "wordcloud: A package for creating word clouds from text data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bdb7ea1c",
@@ -10,6 +25,14 @@
     "import sys\n",
     "!{sys.executable} -m pip install nlp_rake\n",
     "!{sys.executable} -m pip install wordcloud"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f07e17f",
+   "metadata": {},
+   "source": [
+    "# Read the page"
    ]
   },
   {
@@ -108,6 +131,14 @@
     "wc = WordCloud(background_color='white',width=800,height=600)\n",
     "plt.figure(figsize=(15,7))\n",
     "plt.imshow(wc.generate_from_frequencies({ k:v for k,v in res }))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "206be42c",
+   "metadata": {},
+   "source": [
+    "# Plot the picture"
    ]
   },
   {
