--- a/Huragan.ipynb
+++ b/Huragan.ipynb
@@ -46,6 +46,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "66fdce84",
+   "metadata": {},
+   "source": [
+    "It imports the requests module, which allows you to make HTTP requests in Python.\n",
+    "The requests.get(url) line sends an HTTP GET request to the specified url.\n",
+    "The content attribute of the response object contains the raw bytes of the server’s response.\n",
+    "The .decode('utf-8') method converts these bytes into a UTF-8 encoded string.\n",
+    "Finally, it prints the first 1000 characters of the decoded text.\n",
+    "Remember that when you receive data in a response using the Requests library, it is initially received as bytes. If the response contains non-ASCII characters, you need to decode it from UTF-8 format into a string using .decode('utf-8')."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0104b079",
@@ -56,6 +69,31 @@
     "\n",
     "text = requests.get(url).content.decode('utf-8')\n",
     "print(text[:1000])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f5b1bda",
+   "metadata": {},
+   "source": [
+    "\n",
+    "The code imports the HTMLParser class from the html.parser module. This class is used for parsing HTML and extracting information from it.\n",
+    "It defines a custom class called MyHTMLParser, which inherits from HTMLParser.\n",
+    "\n",
+    "Inside MyHTMLParser, there are three methods:\n",
+    "\n",
+    "handle_starttag(self, tag, attrs): \n",
+    "\n",
+    "This method is called when the parser encounters a start tag (e.g., <script> or <style>). If the tag is one of these, it sets the self.script flag to True.\n",
+    "\n",
+    "handle_endtag(self, tag): \n",
+    "\n",
+    "This method is called when the parser encounters an end tag. If the tag is <script> or <style>, it sets the self.script flag back to False.\n",
+    "handle_data(self, data): This method is called when the parser encounters data (text content) between tags. If the data is empty or if the self.script flag is True, it returns without doing anything. Otherwise, it appends the data (with [ edit ] removed) to the self.res attribute.\n",
+    "An instance of MyHTMLParser is created with the name parser.\n",
+    "The parser.feed(text) line processes the input text using the custom parser.\n",
+    "Finally, the modified text (stored in parser.res) is printed, showing the first 1000 characters.\n",
+    "The purpose of this code appears to be cleaning up HTML content by removing script and style tags and extracting visible text. The handle_data method ensures that only relevant text is included in the result."
    ]
   },
   {
