The comments were modified

--- a/Huragan.ipynb
+++ b/Huragan.ipynb
@@ -8,11 +8,13 @@
     "# Import the modules\n",
     "\n",
     "\n",
-    "It imports the sys module, which provides access to system-specific parameters and functions.\n",
-    "It then uses the sys.executable attribute to determine the path to the Python interpreter currently running the script.\n",
-    "The !{...} syntax is used to execute shell commands directly from within Python code (commonly used in Jupyter notebooks or IPython). In this case, it installs two Python packages using pip:\n",
-    "nlp_rake: A package for extracting keywords from text using the Rapid Automatic Keyword Extraction (RAKE) algorithm.\n",
-    "wordcloud: A package for creating word clouds from text data."
+    "In this part we import the *sys module*, which provides access to system-specific parameters and functions.\n",
+    "\n",
+    "- **This module uses the *sys.executable* attribute to determine the path to the Python interpreter currently running the script**.\n",
+    "- **The *!{...}* syntax is used to execute shell commands directly from within Python code (commonly used in Jupyter notebooks or IPython).** \n",
+    "- **It installs two Python packages using pip:**\n",
+    "    - *nlp_rake*: A package for extracting keywords from text using the Rapid Automatic Keyword Extraction (RAKE) algorithm.\n",
+    "     - *wordcloud*: A package for creating word clouds from text data."
    ]
   },
   {
